--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -2,15 +2,48 @@
 <html lang="pt-br">
 
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>site em repositório</title>
+    <title>samuka sound</title>
 </head>
 
 <body>
-    <h1>Olá, mundo!</h1>
-    <hr>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore cumque, maxime, aliquid enim maiores doloremque nemo in perferendis adipisci similique ea excepturi, possimus facere quasi vero aut optio praesentium nulla!</p>
+    <header>
+        <div class="container">
+            <div class="logo">
+                <img src="">
+            </div>
+            <!--logo-->
+
+            <nav class="desktop">
+                <ul>
+                    <li><a style="color: white;" href="">Home</a></li>
+                    <li><a href="">Serviços</a></li>
+                    <li><a href="">Galeria</a></li>
+                    <li><a href="">Contato</a></li>
+                </ul>
+            </nav>
+            <!--desktop-->
+
+            <nav class="mobile">
+                <ul>
+                    <li><a style="color: white;" href="">Home</a></li>
+                    <li><a href="">serviços</a></li>
+                    <li><a href="">Galeria</a></li>
+                    <li><a href="">Contato</a></li>
+                </ul>
+            </nav>
+            <!--mobile-->
+
+            <div class="clear"></div>
+        </div>
+        <!--container-->
+    </header>
+
+    <section>
+        <p>conteúdo</p>
+    </section>
 </body>
 
 </html>
