--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br">
 
 <head>
     <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>samuka sound</title>
+    <title>teste</title>
 </head>
 
 <body>
@@ -42,7 +41,9 @@
     </header>
 
     <section>
-        <p>conteúdo</p>
+        <div class="container">
+            <p>conteúdo</p>
+        </div>
     </section>
 </body>
 
