--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -1,50 +1,175 @@
 <!DOCTYPE html>
-
+<html>
 <head>
-    <link rel="stylesheet" href="css/style.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>teste</title>
+	<title>Home</title>
+	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
 </head>
-
 <body>
-    <header>
-        <div class="container">
-            <div class="logo">
-                <img src="">
-            </div>
-            <!--logo-->
 
-            <nav class="desktop">
-                <ul>
-                    <li><a style="color: white;" href="">Home</a></li>
-                    <li><a href="">Serviços</a></li>
-                    <li><a href="">Galeria</a></li>
-                    <li><a href="">Contato</a></li>
-                </ul>
-            </nav>
-            <!--desktop-->
+<header>
 
-            <nav class="mobile">
-                <ul>
-                    <li><a style="color: white;" href="">Home</a></li>
-                    <li><a href="">serviços</a></li>
-                    <li><a href="">Galeria</a></li>
-                    <li><a href="">Contato</a></li>
-                </ul>
-            </nav>
-            <!--mobile-->
+	<div class="container">
+	<div class="logo">
+		<img src="imagens/logo.png" />
+	</div><!--logo-->
 
-            <div class="clear"></div>
-        </div>
-        <!--container-->
-    </header>
+	<nav class="desktop">
+		<ul>
+			<li><a style="color:#EB2D2D;" href="">Home</a></li>
+			<li><a href="venda.html">Venda</a></li>
+			<li><a href="Sobre.html">Sobre</a></li>
+			<li><a class="cont" goto="contato" href="">Contato</a></li>
+		</ul>
+	</nav><!--desktop-->
 
-    <section>
-        <div class="container">
-            <p>conteúdo</p>
-        </div>
-    </section>
+	<nav class="mobile">
+		<ul>
+			<li><a style="color:#EB2D2D;" href="">Home</a></li>
+			<li><a href="venda.html">Venda</a></li>
+			<li><a href="sobre.html">Sobre</a></li>
+			<li><a class="cont" goto="contato" href="">Contato</a></li>
+		</ul>
+	</nav><!--mobile-->
+
+	<div class="clear"></div>
+	</div><!--container-->
+</header>
+
+<section class="banner">
+	<div class="container">
+	<div class="text-banner">
+		<div class="text-banner-single">Consultoria</div>
+		<div class="text-banner-single">Compra</div>
+		<div class="text-banner-single">Venda</div>
+		<div class="text-banner-single">e-mail@hotmail.com</div>
+	</div><!--text-banner-->
+	</div><!--container-->
+</section><!--banner-->
+
+<section class="veiculos-destaque">
+	<div class="line-titulo">
+		<div class="ln1"></div>
+		<h2>Veículos em destaque</h2>
+	</div><!--line-titulo-->
+	<div class="container">
+	<div class="vitrine-destaque">
+		<div style="background-image:url('imagens/carro1.jpg');" class="carro-img"></div><!--carro-img-->
+		<div class="info-carro">
+			<h2>Volkswagen Karmann-ghia</h2>
+			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
+			<a class="btn1" href="test-carro1.html">Mais Detalhes</a>
+		</div><!--info-carro-->
+	</div><!--vitrine-destaque-->
+
+	<div class="vitrine-destaque">
+		<div style="background-image:url('imagens/mustang.jpg');" class="carro-img"></div><!--carro-img-->
+		<div class="info-carro">
+			<h2>Volkswagen Karmann-ghia</h2>
+			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
+			<a class="btn1" href="test-mustang.html">Mais Detalhes</a>
+		</div><!--info-carro-->
+	</div><!--vitrine-destaque-->
+
+	<div class="vitrine-destaque">
+		<div style="background-image:url('imagens/ww_bora.jpg');" class="carro-img"></div><!--carro-img-->
+		<div class="info-carro">
+			<h2>Volkswagen Karmann-ghia</h2>
+			<p>1.6 8v, Gasolina, 2P, Manual1969</p>
+			<a class="btn1" href="test-bora.html">Mais Detalhes</a>
+		</div><!--info-carro-->
+	</div><!--vitrine-destaque-->
+	<div class="clear"></div>
+	</div><!--container-->
+</section><!--veiculos-destaque-->
+
+<section class="servicos-descricao">
+	<div class="half1">
+		<div class="half1-wraper">
+		<h2>Serviços</h2>
+		<ul>
+			<li>Compra</li>
+			<li>Venda</li>
+			<li>Consultoria de veículos</li>
+			<li>Indicação de Mecânicos e peças</li>
+		</ul>
+		<a class="btn1" href="">Saiba mais</a>
+		</div>
+	</div><!--half-1-->
+
+	<div class="half2">
+
+		<h2>Depoimentos</h2>
+		<div class="depoimento-single">
+			<p>“O Rafael foi muito atencioso, me buscou no aeroporto
+			e garantiu toda comodidade e conforto no almoço, no transfer, na visita ao veículo e durante o test-drive”</p>
+			<p>“O Rafael foi muito atencioso O Rafael foi muito atencioso, me buscou no aeroporto O Rafael foi muito atencioso, me buscou no aeroporto O Rafael foi muito atencioso, me buscou no aeroporto”</p>
+			<div class="navigation">
+				<div class="arrows">
+					<img prev src="imagens/arrow-left.png" />
+					<img next src="imagens/arrow-right.png" />
+				</div><!--arrows-->
+				<div class="nome-depoimento">João da silva</div>
+			</div><!--navigation-->
+		</div><!--depoimento-single-->
+	</div><!--half2-->
+
+</section><!--servicos-descricao-->
+
+<section id="contato" class="contato">
+	<div class="line-titulo">
+		<div class="ln1"></div>
+		<h2>Contato</h2>
+	</div><!--line-titulo-->
+
+	<form>
+
+		<div class="input-wraper w100">
+			<input placeholder="Nome*" required type="text" name="nome" />
+		</div><!--input-wraper w100-->
+
+		<div class="input-wraper w50">
+			<input placeholder="E-mail*" required type="email" name="email" />
+		</div><!--input-wraper w100-->
+
+		<div class="input-wraper w50">
+			<input placeholder="Telefone*" required type="text" name="telefone" />
+		</div><!--input-wraper w100-->
+
+		<div class="input-wraper w100">
+			<textarea placeholder="Mensagem*" required></textarea>
+		</div><!--input-wraper w100-->	
+
+		<div class="input-wraper w100">
+			<input class="btn1" value="Enviar" type="submit" name="acao">
+		</div><!--input-wraper w100-->
+
+		<div class="clear"></div>	
+
+	</form>
+
+</section><!--contato-->
+
+<footer>
+	<div class="container">
+		<nav class="desktop">
+			<ul>
+				<li><a class="home" style="color:#EB2D2D;" href="">Home</a></li>
+				<li><a href="venda.html">Venda</a></li>
+				<li><a href="sobre.html">Sobre</a></li>
+				<li><a goto="contato" class="cont" href="">Contato</a></li>
+			</ul>
+		</nav>
+		<p>Todos os direitos reservados</p>
+	</div><!--container-->
+		<div class="clear"></div>
+</footer>
+
+<script src="js/jquery.js"></script>
+<script src="js/functions.js"></script>
+<script src="js/menu_responsivo.js"></script>
+
 </body>
-
 </html>
